@@ -8166,7 +8166,7 @@
       <method name="GetModel" cname="gtk_tree_view_get_model">
         <return-type type="GtkTreeModel*"/>
       </method>
-      <method name="GetPathAtPos" cname="gtk_tree_view_get_path_at_pos">
+      <method name="GetPathAtPos" cname="gtk_tree_view_get_path_at_pos" hidden="1">
         <return-type type="gboolean"/>
         <parameters>
           <parameter type="gint" name="x"/>
@@ -8409,8 +8409,8 @@
         <parameters>
           <parameter type="gint" name="wx"/>
           <parameter type="gint" name="wy"/>
-          <parameter type="gint*" name="tx"/>
-          <parameter type="gint*" name="ty"/>
+          <parameter type="gint*" name="tx" pass_as="out"/>
+          <parameter type="gint*" name="ty" pass_as="out"/>
         </parameters>
       </method>
     </object>
