@@ -377,7 +377,23 @@
 	</attribute>
   </data>
 </rule>
-	
+<rule>
+  <class name="GtkTreeView">
+    <method>WidgetToTreeCoords</method>
+  </class>
+  <data>
+    <attribute target="param">
+	  <filter level="name">tx</filter>
+	  <name>pass_as</name>
+	  <value>out</value>
+    </attribute>
+    <attribute target="param">
+	  <filter level="name">ty</filter>
+	  <name>pass_as</name>
+	  <value>out</value>
+    </attribute>
+  </data>
+</rule>
 
 <!-- variable arguments -->
 <rule>
@@ -1643,6 +1659,17 @@
     <method>GetText</method>
     <method>SetText</method>
     <method>Set</method>
+  </class>
+  <data>
+    <attribute target="method">
+      <name>hidden</name>
+      <value>1</value>
+    </attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GtkTreeView">
+    <method>GetPathAtPos</method>
   </class>
   <data>
     <attribute target="method">
