@@ -1,3 +1,13 @@
+2003-04-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* gtk/TreeView.custom:
+	(GetPathAtPos): added 3 overloads of this method so that the caller
+	does not need to create extra variables that may not use.
+
+	* api/gtk-api.xml:
+	* sources/Gtk.metadata: added pass_out attribute for tx and ty
+	arguments of TreeView::WidgetToTreeCoords. Hide TreeView::GetPathAtPos.
+
 2003-04-14  Lee Mallabone  <gnome@fonicmonkey.net>
 
 	* api/gtk-api.xml, sources/Gtk.metadata, gtk/ColorSelection.custom:
